# C_practice

./: CMakeLists.txt
practice01/: main.c  practice01  solution.c
practice02/: main.c  prac02  solution.c
practice03/: main.c  prac03  solution.c
practice04/: main.c  prac04  solution.c
practice05/: main.c  prac05  solution.c
practice06/: main.c  prac06  solution.c
practice07/: main.c  prac07  solution.c  solution.h
practice08/: main.c  solution.c
practice09/: main.c  solution.c
practice10/: main.c  solution.c
practice11/: main.c  solution.c
practice12/: main.c  solution.c
practice13/: main.c  solution.c
